# knotly

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/html/: conversation.html  conversation.json
examples/html/output/: Conversation.md  turn001_hello-any-updates.md  turn002_yes-the-docs-are-live-at.md
examples/json/: chatgpt_sample.json
response_from_codex/: turn004_yes-a-few-days-is-often.md
samples_for_codex/: turn004_yes-a-few-days-is-often.md
src/knotly/: cli.py
src/threadopolis/: __init__.py  cli.py  console.py  models.py  pipeline.py  utils.py  writers.py
src/threadopolis/capture/: __init__.py  html_capture.py  playwright_capture.py
src/threadopolis/parsers/: __init__.py  html_input.py  json_input.py
src/threadopolis/renderers/: parent.py  turn.py
tests/: test_html_parser.py  test_threadopolis.py
tests/golden/html/: Conversation.md  turn001_hello-any-updates.md  turn002_yes-the-docs-are-live-at.md
tests/golden/json/: Conversation.md  turn001_hi-there-can-you-share-the.md  turn002_sure-check-out-threadopolis.md
