[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "threadopolis"
version = "0.1.0"
description = "Split assistant conversations into Obsidian-ready markdown bundles."
readme = "README.md"
authors = [{name = "Threadopolis Contributors"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.scripts]
threadopolis = "threadopolis.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
